--- a/hw1_format.css
+++ b/hw1_format.css
@@ -4,6 +4,16 @@ body{
 h1 {
 	text-align: center;
 }
+div{
+
+  display:incline-block;
+}
+#top{
+  width:100%;
+  height:40%;
+  background-color:#FFB6C1
+  position:relative;
+}
 
 table{
   width:80%;
